--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -15,7 +15,7 @@
    <input type="checkbox" id="nav-toggle" class="nav-toggle">
    <nav>
      <ul>
-       <li><a href="#">Home</a></li>
+       <li><a href="/index.html">Home</a></li>
        <li><a href="./src/pages/about.html">About</a></li>
        <li><a href="#">Shopping</a></li>
        <li><a href="#contact_form">Contact</a></li>
