--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -27,7 +27,7 @@
 
          <input type="submit" value="Sign Up now" name="submit2" class="submit_btn">
 
-         <p>already have an account <a href="./login.html">Login in</a></p>
+         <p>already have an account <a href="/index.html">Login in</a></p>
 
       </form>
 
