--- a/src/pages/view_product.html
+++ b/src/pages/view_product.html
@@ -79,7 +79,7 @@
 
                        <input type="submit" name="cart" value="Add to Cart" class="cart_btn"/>              
                        
-                       <button class="back_btn"><a href="/index.html">Back</a></button>
+                       <button class="back_btn"><a href="./home.html">Back</a></button>
 
                    </form>
 
