--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -15,11 +15,11 @@
    <input type="checkbox" id="nav-toggle" class="nav-toggle">
    <nav>
      <ul>
-       <li><a href="/index.html">Home</a></li>
-       <li><a href="./src/pages/about.html">About</a></li>
-       <li><a href="#">Shopping</a></li>
+       <li><a href="./home.html">Home</a></li>
+       <li><a href="/">About</a></li>
+       <li><a href="./cart.html">Shopping</a></li>
        <li><a href="#contact_form">Contact</a></li>
-       <li><a href="#"><i class="fa-solid fa-user"></i></a></li>
+       <li><a href="/index.html"><i class="fa-solid fa-user"></i></a></li>
      </ul>
    </nav>
    <label for="nav-toggle" class="nav-toggle-label">
