--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -8,6 +8,12 @@
 
       <!-- My Stylesheet -->
       <link rel="stylesheet" href="/src/stylesheet/stylesheet.css">
+
+      <!-- Animate Styles  -->
+      <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+      />
       
       <!-- awesomeFonts script -->
       <script src="https://kit.fontawesome.com/45c101dd7d.js" crossorigin="anonymous" defer></script>
@@ -47,8 +53,8 @@
     </header>
 
 
-    <div class="content" data-aos="slide-up">
-      <h2>Japanimation</h2>
+    <div class="content">
+      <h2 class="animate__animated animate__backInUp ">Japanimation</h2>
     </div>
 
 
@@ -199,6 +205,15 @@
                      <i class="fa-solid fa-phone fa-lg" id="icon"></i>
                     <p>074 572 1123</p>
 
+                  </div>
+
+                  <div class="map">
+                    <div >
+                      <iframe width="100%" height="250" src="https://maps.google.com/maps?q=83%7 Dreyer%20St,%20Claremont,%20CapeTown,%202196&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+                      </iframe>
+                      <br>
+
+                  </div>
                   </div>
 
               </div>
